# datatalk

./: .gitignore  CONTRIBUTING.md  GEODATATALK-README.md  HOMEBREW_SETUP.md  LICENSE  PYPI_SETUP.md  README.md  RELEASE.md  demo.tape  geodatatalk-pyproject.toml  pyproject.toml  release.sh  release_all.sh  release_github.sh  release_homebrew.sh  release_pypi.sh
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: publish.yml
datatalk/: config.py  database.py  llm.py  main.py  printer.py  query.py  renderer.py
datatalk/llm/: __init__.py  base.py  factory.py
datatalk/llm/providers/: __init__.py  anthropic.py  azure.py  gemini.py  ollama.py  openai.py
geodatatalk/: __init__.py  geodatabase.py  geollm.py  geoprinter.py  geoquery.py  main.py
homebrew/: datatalk-cli.rb  datatalk.rb
sample_data/: customers.csv  employees.csv  inventory.csv  sales_data.csv
tests/: test_data_e2e.csv  test_data_e2e.parquet  test_data_e2e.xlsx  test_e2e.py  test_e2e_smoke.py
