[project]
name = "datatalk-cli"
version = "0.1.1"
description = "Query CSV and Parquet data with natural language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Vitaly Tsaplin", email = "vitaly@tsaplin.com"},
]
keywords = ["data", "csv", "parquet", "ai", "sql", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
]
dependencies = [
    "duckdb>=0.8.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openai>=1.102.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/vtsaplin/datatalk"
Repository = "https://github.com/vtsaplin/datatalk"
Issues = "https://github.com/vtsaplin/datatalk/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datatalk"]

[project.scripts]
datatalk-cli = "datatalk.main:main"

[tool.uv]
dev-dependencies = [
    "twine>=4.0.0",
    "build>=0.10.0",
]
