[project]
name = "datatalk"
version = "0.1.6"
description = "Query CSV and Parquet data with natural language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Vitaly Tsaplin", email = "vitaly@tsaplin.com"},
]
dependencies = [
    "duckdb>=0.8.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openai>=1.102.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/vtsaplin/datatalk"
Repository = "https://github.com/vtsaplin/datatalk"
Issues = "https://github.com/vtsaplin/datatalk/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
datatalk = "datatalk.main:main"

[tool.uv]
dev-dependencies = []

[tool.setuptools.packages.find]
include = ["datatalk*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
